; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_color-correction-filter.c_color_correction_filter_properties.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_color-correction-filter.c_color_correction_filter_properties.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SETTING_GAMMA = common dso_local global i32 0, align 4
@TEXT_GAMMA = common dso_local global i32 0, align 4
@SETTING_CONTRAST = common dso_local global i32 0, align 4
@TEXT_CONTRAST = common dso_local global i32 0, align 4
@SETTING_BRIGHTNESS = common dso_local global i32 0, align 4
@TEXT_BRIGHTNESS = common dso_local global i32 0, align 4
@SETTING_SATURATION = common dso_local global i32 0, align 4
@TEXT_SATURATION = common dso_local global i32 0, align 4
@SETTING_HUESHIFT = common dso_local global i32 0, align 4
@TEXT_HUESHIFT = common dso_local global i32 0, align 4
@SETTING_OPACITY = common dso_local global i32 0, align 4
@TEXT_OPACITY = common dso_local global i32 0, align 4
@SETTING_COLOR = common dso_local global i32 0, align 4
@TEXT_COLOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @color_correction_filter_properties to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @color_correction_filter_properties(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call i32* (...) @obs_properties_create()
  store i32* %4, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @SETTING_GAMMA, align 4
  %7 = load i32, i32* @TEXT_GAMMA, align 4
  %8 = call i32 @obs_properties_add_float_slider(i32* %5, i32 %6, i32 %7, double -3.000000e+00, double 3.000000e+00, double 1.000000e-02)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @SETTING_CONTRAST, align 4
  %11 = load i32, i32* @TEXT_CONTRAST, align 4
  %12 = call i32 @obs_properties_add_float_slider(i32* %9, i32 %10, i32 %11, double -2.000000e+00, double 2.000000e+00, double 1.000000e-02)
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @SETTING_BRIGHTNESS, align 4
  %15 = load i32, i32* @TEXT_BRIGHTNESS, align 4
  %16 = call i32 @obs_properties_add_float_slider(i32* %13, i32 %14, i32 %15, double -1.000000e+00, double 1.000000e+00, double 1.000000e-02)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* @SETTING_SATURATION, align 4
  %19 = load i32, i32* @TEXT_SATURATION, align 4
  %20 = call i32 @obs_properties_add_float_slider(i32* %17, i32 %18, i32 %19, double -1.000000e+00, double 5.000000e+00, double 1.000000e-02)
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* @SETTING_HUESHIFT, align 4
  %23 = load i32, i32* @TEXT_HUESHIFT, align 4
  %24 = call i32 @obs_properties_add_float_slider(i32* %21, i32 %22, i32 %23, double -1.800000e+02, double 1.800000e+02, double 1.000000e-02)
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* @SETTING_OPACITY, align 4
  %27 = load i32, i32* @TEXT_OPACITY, align 4
  %28 = call i32 @obs_properties_add_int_slider(i32* %25, i32 %26, i32 %27, i32 0, i32 100, i32 1)
  %29 = load i32*, i32** %3, align 8
  %30 = load i32, i32* @SETTING_COLOR, align 4
  %31 = load i32, i32* @TEXT_COLOR, align 4
  %32 = call i32 @obs_properties_add_color(i32* %29, i32 %30, i32 %31)
  %33 = load i8*, i8** %2, align 8
  %34 = call i32 @UNUSED_PARAMETER(i8* %33)
  %35 = load i32*, i32** %3, align 8
  ret i32* %35
}

declare dso_local i32* @obs_properties_create(...) #1

declare dso_local i32 @obs_properties_add_float_slider(i32*, i32, i32, double, double, double) #1

declare dso_local i32 @obs_properties_add_int_slider(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @obs_properties_add_color(i32*, i32, i32) #1

declare dso_local i32 @UNUSED_PARAMETER(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
